@@ -1,3 +1,8 @@
+2004-07-28  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtkexpander.xml (Description) Fix bug in example code using
+	"expanded" property signal. Add note about using "activate" signal.
+
 2004-07-27  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gdkatom.xml (Description) Add note on support for
